Changes with Apache 1.3.13

  *) Work around a popular restriction of some sed(1)'s in APACI where
     "1,/<pattern>/" commands start searching for <pattern> at line 2 only.
     [Ralf S. Engelschall]

  *) Merged in a small subset of SGI's latest `10x' patchkit for Apache
     1.3.11. The extracted and merged in parts are entirely cleanup and
     non-performance related changes only. SGI's remaining changes are
     not taken over, because they are either cluttering the Apache 1.3
     sources too much (e.g. the lint(1) related changes) or cause too
     much internal changes (e.g. the ap_int32 types, etc.) which are not
     reasonable to do any longer for Apache 1.3 (they should be done for
     Apache 2.0 instead).
     [Mike Abbott <mja@sgi.com>, Ralf S. Engelschall]

  *) Fixes to mod_proxy for BeOS support.
     [David Reid <dreid@jetnet.co.uk>]

  *) Fix return value calculation in APXS' error messages.
     This should avoid the confusion on APXS errors.
     [Ralf S. Engelschall]

  *) Make ApacheBench (ab) compile again stand-alone under 
     -DNO_APACHE_INCLUDES.
     [Ralf S. Engelschall]

  *) The ServerTokens directive now accepts the 'ProductOnly' keyword,
     which results in the display of just 'Apache' with no version
     information.  Additional product tokens are still only visible
     with ServerTokens Full.  In addition, ServerTokens now complains
     about bogus keywords (which it used to silently treat as 'Full').
     [Ken Coar]

Changes with Apache 1.3.12

  *) Only OS/2 requires the addition "t" flag for ap_pfopen()
     (as therefore fopen() as well). This is handled by the
     FOPEN_REQUIRES_T macro. [Ian Turner <iant@sequent.com>,
     Jim Jagielski] PR#5760

  *) The default charset is only added, when enabled, for those
     Content-types which require it (text/plain, text/html).
     [Jim Jagielski] PR#5766

  *) Fix handling of multiple queries in APXS commands (e.g. "apxs -q