@@ -1,5 +1,8 @@
 Changes with Apache 1.3.13
 
+  *) [EBCDIC] Make chunked encoding work again; it was broken by the
+     recent CRLF macro changes. An oversight. [Martin Kraemer]
+
   *) Work around a popular restriction of some sed(1)'s in APACI where
      "1,/<pattern>/" commands start searching for <pattern> at line 2 only.
      [Ralf S. Engelschall]
